--- a/demo/demo/PrimeMessenger-Info.plist
+++ b/demo/demo/PrimeMessenger-Info.plist
@@ -12,5 +12,7 @@
     <string></string>
     <key>PUBLIC_KEY</key>
     <string></string>
+    <key>AGORA_API_KEY</key>
+	<string></string>
 </dict>
 </plist>
