--- a/ChannelizeAPI.xcframework/Info.plist
+++ b/ChannelizeAPI.xcframework/Info.plist
@@ -6,12 +6,11 @@
 	<array>
 		<dict>
 			<key>LibraryIdentifier</key>
-			<string>ios-armv7_arm64</string>
+			<string>ios-arm64</string>
 			<key>LibraryPath</key>
 			<string>ChannelizeAPI.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
-				<string>armv7</string>
 				<string>arm64</string>
 			</array>
 			<key>SupportedPlatform</key>
